--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="left">
         <a href="index.html">
             <picture>
-                <img src="img/horse.jpg", alt="horse">
+                <img src="img/horse.jpg" alt="horse">
             </picture>
         </a>
         <nav>
