--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
             <strong><a href="https://www.linkedin.com/in/hao-cheng-834491230?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOJRoevKKTnuxyLOJcJQufQ%3D%3D">Linkedin</a></strong>
         </div>
         
+        <div>
+            <h2>Homework 5</h2>
+            <a href="./hw5/part1/methodtest.html">Part1</a>
+            <a href="./hw5/part2/webcomponent.html">Part2</a>
+        </div>
     </main>
 
     <footer>
